:heavy_plus_sign::pushpin: added GSL as dependency on version v2.0.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contrib/SFML"]
 	path = contrib/SFML
 	url = https://github.com/SFML/SFML
+[submodule "contrib/GSL"]
+	path = contrib/GSL
+	url = https://github.com/Microsoft/GSL
