:sparkles: added GameStateManager and abstract GameState base class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(ovenbrick)
 
 set(CMAKE_CXX_STANDARD 14)
 
+add_subdirectory(contrib)
+add_subdirectory(game)
+add_subdirectory(test)
+
 add_executable(ovenbrick main.cxx)
+target_link_libraries(ovenbrick game)
