:sparkles: implemented main window and dummy game state

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(game STATIC
         game_state.hxx
-        game_state_manager.cxx game_state_manager.hxx)
+        game_state_manager.cxx game_state_manager.hxx dummy_game_state.cxx dummy_game_state.hxx)
 target_include_directories(game PUBLIC ../contrib/GSL/include)
-target_link_libraries(game sfml-system)
+target_link_libraries(game sfml-system sfml-window)
