--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
   - linux
 install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y libxrandr-dev libudev-dev libgl1-mesa-dev libopenal-dev libflac-dev libvorbis-dev
+  - sudo apt-get install -y libxrandr-dev libudev-dev libgl1-mesa-dev libopenal-dev libflac-dev libvorbis-dev libboost-all-dev
 before_script:
   - mkdir build
   - cd build
