--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 
 # intellij
 *.iml
+.idea/deployment.xml
 .idea/encodings.xml
 .idea/misc.xml
 .idea/modules.xml
+.idea/other.xml
 .idea/vcs.xml
 .idea/workspace.xml
