:recycle::heavy_plus_sign: added my DI container to get rid of mutable global state

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(game STATIC
         dummy_game_state.cxx dummy_game_state.hxx
         keyboard_layout.hxx keyboard_layout.cxx
         resources.hxx "${CMAKE_CURRENT_BINARY_DIR}/resources.cxx")
-target_include_directories(game PUBLIC ../contrib/GSL/include ../contrib/incbin)
+target_include_directories(game PUBLIC ../contrib/GSL/include ../contrib/incbin ../contrib/ddic)
 target_link_libraries(game PUBLIC sfml-system sfml-window sfml-graphics)
 target_link_libraries(game PUBLIC Boost::log)
+target_link_libraries(game PUBLIC ddic)
